Fixed bug related to updating user's personal data.

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -153,3 +153,23 @@ Size.author.firstName=Author's first name can not be longer that {1} characters 
 #Author.lastName
 NotBlank.author.lastName=Author's last name can not be empty.
 Size.author.lastName=Author's last name can not be longer that {1} characters length.
+
+#UserProfileDto.firstName
+NotBlank.userProfileDto.firstName=First name is required.
+Size.userProfileDto.firstName=First name must be between {2} and {1} characters length.
+
+#UserProfileDto.lastName
+NotBlank.userProfileDto.lastName=Last name is required.
+Size.userProfileDto.lastName=Last name must be between {2} and {1} characters length.
+
+#UserProfileDto.email
+NotBlank.userProfileDto.email=Email is required.
+Email.userProfileDto.email=Email address must be well formed.
+
+#UserProfileDto.address
+NotBlank.userProfileDto.address=Address is required.
+Size.userProfileDto.address=Address must be between {2} and {1} characters length.
+
+#UserProfileDto.city
+NotBlank.userProfileDto.city=City is required.
+Size.userProfileDto.city=City must be between {2} and {1} characters length.
