--- a/src/main/resources/messages/messages_de.properties
+++ b/src/main/resources/messages/messages_de.properties
@@ -154,3 +154,22 @@ Size.author.firstName=Der Vorname des Autors darf nicht l\u00e4nger als die L\u0
 NotBlank.author.lastName=Der Nachname des Autors darf nicht leer sein.
 Size.author.lastName=Der Nachname des Autors darf nicht l\u00e4nger als die L\u00e4nge von {1} Zeichen sein.
 
+#UserProfileDto.firstName
+NotBlank.userProfileDto.firstName=Vorname ist erforderlich.
+Size.userProfileDto.firstName=Der Vorname muss zwischen {2} und {1} Zeichen lang sein.
+
+#UserProfileDto.lastName
+NotBlank.userProfileDto.lastName=Nachname ist erforderlich.
+Size.userProfileDto.lastName=Der Nachname muss zwischen der Länge von {2} und {1} Zeichen lang sein.
+
+#UserProfileDto.email
+NotBlank.userProfileDto.email=Email Adresse wird ben\u00f6tigt.
+Email.userProfileDto.email=Die E-Mail-Adresse muss gut formatiert sein.
+
+#UserProfileDto.address
+NotBlank.userProfileDto.address=Adresse ist erforderlich.
+Size.userProfileDto.address=Die Adresse muss zwischen {2} und {1} Zeichen lang sein.
+
+#UserProfileDto.city
+NotBlank.userProfileDto.city=Stadt ist erforderlich.
+Size.userProfileDto.city=Die Stadt muss zwischen {2} und {1} Zeichen lang sein.
