--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -63,7 +63,7 @@ user.orders=Twoje zam\u00F3wienia
 user.books=Twoje ksi\u0105\u017Cki
 user.profile=Profil
 user.emptyBooks=Nie kupi\u0142e\u015B jeszcze \u017Cadnej ksi\u0105\u017Cki.
-user.emptyOrders=Nie z\u0142o\u017Cy\u0142e\u015B jeszcze \u017Cadnego zamówienia.
+user.emptyOrders=Nie z\u0142o\u017Cy\u0142e\u015B jeszcze \u017Cadnego zam\u00F3wienia.
 user.optional=(Opcjonalnie)
 
 #user profile
@@ -101,8 +101,8 @@ checkout.lastName=Nazwisko
 checkout.email=Email
 checkout.address=Adres
 checkout.city=Miasto
-checkout.placeOrder=Z\u0142ó\u017C zamówienie
-checkout.yourCart=Twój koszyk
+checkout.placeOrder=Z\u0142\u00F3\u017C zam\u00F3wienie
+checkout.yourCart=Tw\u00F3j koszyk
 checkout.promoCode=Kod promocyjne
 checkout.total=W sumie
 checkout.redeem=Odbierz
@@ -144,13 +144,32 @@ NotBlank.userDto.email=Email is wymagany.
 Email.userDto.email=Niepoprawny adres email.
 
 #BookDetails.description
-Size.bookDetails.description=Opis nie mo\u017Ce by\u0107 d\u0142u\u017Cszy ni\u017C {1} znaków.
+Size.bookDetails.description=Opis nie mo\u017Ce by\u0107 d\u0142u\u017Cszy ni\u017C {1} znak\u00F3w.
 
 #Author.firstName
 NotBlank.author.firstName=Imi\u0119 autora nie mo\u017Ce by\u0107 puste.
-Size.author.firstName=Imi\u0119 autora nie mo\u017Ce by\u0107 d\u0142u\u017Csze ni\u017C {1} znaków.
+Size.author.firstName=Imi\u0119 autora nie mo\u017Ce by\u0107 d\u0142u\u017Csze ni\u017C {1} znak\u00F3w.
 
 #Author.lastName
 NotBlank.author.lastName=Nazwisko autora nie mo\u017Ce by\u0107 puste.
-Size.author.lastName=Nazwisko autora nie mo\u017Ce by\u0107 d\u0142u\u017Csze ni\u017C {1} znaków.
+Size.author.lastName=Nazwisko autora nie mo\u017Ce by\u0107 d\u0142u\u017Csze ni\u017C {1} znak\u00F3w.
 
+#UserProfileDto.firstName
+NotBlank.userProfileDto.firstName=Imi\u0119 jest wymagane.
+Size.userProfileDto.firstName=Imi\u0119 musi mie\u0107 d\u0142ugo\u015B\u0107 od {2} do {1} znak\u00F3w.
+
+#UserProfileDto.lastName
+NotBlank.userProfileDto.lastName=Nazwisko jest wymagane.
+Size.userProfileDto.lastName=Nazwisko musi mie\u0107 d\u0142ugo\u015B\u0107 od {2} do {1} znak\u00F3w.
+
+#UserProfileDto.email
+NotBlank.userProfileDto.email=Email jest wymagany.
+Email.userProfileDto.email=Niepoprawny adres email.
+
+#UserProfileDto.address
+NotBlank.userProfileDto.address=Adres jest wymagany.
+Size.userProfileDto.address=Adres musi mie\u0107 d\u0142ugo\u015B\u0107 od {2} do {1} znak\u00F3w.
+
+#UserProfileDto.city
+NotBlank.userProfileDto.city=Miasto jest wymagane.
+Size.userProfileDto.city=Nazwa miasta musi mie\u0107 d\u0142ugo\u015B\u0107 od {2} do {1} znak\u00F3w.
