Deep refactoring: tab indents switched into space intends, added constructor autowiring instead of property autowiring because of easier testing, added data transfer objects and converters for all entity classes

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -47,7 +47,6 @@ books.pageTitle=webSTORE books
 books.title=Title
 books.author=Author
 books.price=Price
-books.category=Category
 books.addToCart=Add to cart
 books.add=Add
 books.added=Added
@@ -103,9 +102,7 @@ checkout.address=Address
 checkout.city=City
 checkout.placeOrder=Place order
 checkout.yourCart=Your cart
-checkout.promoCode=Promo code
 checkout.total=Total
-checkout.redeem=Redeem
 
 #order confirmation
 confirmation.pageTitle=Order confirmation
@@ -129,30 +126,30 @@ help.viewDocs=View docs
 
 ### error messages ###
 
-#UserDto.username
-NotBlank.userDto.username=Username is required.
-Size.userDto.username=Username must be between {2} and {1} characters length.
+#UserRegisterDto.username
+NotBlank.userRegisterDto.username=Username is required.
+Size.userRegisterDto.username=Username must be between {2} and {1} characters length.
 
-#UserDto.password & passwordConfirm
-NotBlank.userDto.password=Password is required.
-Size.userDto.password=Password must be between {2} and {1} characters length.
-NotBlank.userDto.passwordConfirm=That field can not be empty.
-PasswordMatches.userDto=Passwords do not match.
+#UserRegisterDto.password & passwordConfirm
+NotBlank.userRegisterDto.password=Password is required.
+Size.userRegisterDto.password=Password must be between {2} and {1} characters length.
+NotBlank.userRegisterDto.passwordConfirm=That field can not be empty.
+PasswordMatches.userRegisterDto=Passwords do not match.
 
-#UserDto.email
-NotBlank.userDto.email=Email is required.
-Email.userDto.email=Email address must be well formed.
+#UserRegisterDto.email
+NotBlank.userRegisterDto.email=Email is required.
+Email.userRegisterDto.email=Email address must be well formed.
 
-#BookDetails.description
-Size.bookDetails.description=Description can not be longer that {1} characters length.
+#BookDetailsDto.description
+Size.bookDetailsDto.description=Description can not be longer that {1} characters length.
 
-#Author.firstName
-NotBlank.author.firstName=Author's first name can not be empty.
-Size.author.firstName=Author's first name can not be longer that {1} characters length.
+#AuthorDto.firstName
+NotBlank.authorDto.firstName=Author's first name can not be empty.
+Size.authorDto.firstName=Author's first name can not be longer that {1} characters length.
 
-#Author.lastName
-NotBlank.author.lastName=Author's last name can not be empty.
-Size.author.lastName=Author's last name can not be longer that {1} characters length.
+#AuthorDto.lastName
+NotBlank.authorDto.lastName=Author's last name can not be empty.
+Size.authorDto.lastName=Author's last name can not be longer that {1} characters length.
 
 #UserProfileDto.firstName
 NotBlank.userProfileDto.firstName=First name is required.
