--- a/src/main/resources/messages/messages_de.properties
+++ b/src/main/resources/messages/messages_de.properties
@@ -47,7 +47,6 @@ books.pageTitle=B\u00fccher im webSTORE
 books.title=Titel
 books.author=Autor
 books.price=Preis
-books.category=Kategorie
 books.addToCart=In den Warenkorb legen
 books.add=Lege
 books.added=Hinzugef\u00fcgt
@@ -103,9 +102,7 @@ checkout.address=Adresse
 checkout.city=Stadt
 checkout.placeOrder=Bestellung aufgeben
 checkout.yourCart=Ihr Einkaufswagen
-checkout.promoCode=Gutscheincode
 checkout.total=Summe
-checkout.redeem=Einl\u00f6sen
 
 #order confirmation
 confirmation.pageTitle=Bestellbest\u00e4tigung
@@ -129,30 +126,30 @@ help.viewDocs=Document anzeigen
 
 ### error messages ###
 
-#UserDto.username
-Size.userDto.username=Benutzername muss zwischen {2} und {1} Zeichen L\u00e4nge sein.
-NotBlank.userDto.username=Der Benutzername darf nicht leer sein.
+#UserRegisterDto.username
+Size.userRegisterDto.username=Benutzername muss zwischen {2} und {1} Zeichen L\u00e4nge sein.
+NotBlank.userRegisterDto.username=Der Benutzername darf nicht leer sein.
 
-#UserDto.password & passwordConfirm
-NotBlank.userDto.password=Passwort wird benötigt.
-Size.userDto.password=Das Passwort muss zwischen {2} und {1} Zeichen lang sein.
-NotBlank.userDto.passwordConfirm=Dieses Feld darf nicht leer sein.
-PasswordMatches.userDto=Passwörter stimmen nicht \u00fcberein.
+#UserRegisterDto.password & passwordConfirm
+NotBlank.userRegisterDto.password=Passwort wird benï¿½tigt.
+Size.userRegisterDto.password=Das Passwort muss zwischen {2} und {1} Zeichen lang sein.
+NotBlank.userRegisterDto.passwordConfirm=Dieses Feld darf nicht leer sein.
+PasswordMatches.userRegisterDto=Passwï¿½rter stimmen nicht \u00fcberein.
 
-#UserDto.email
-NotBlank.userDto.email=Email Adresse wird ben\u00f6tigt.
-Email.userDto.email=Die E-Mail-Adresse muss gut formatiert sein.
+#UserRegisterDto.email
+NotBlank.userRegisterDto.email=Email Adresse wird ben\u00f6tigt.
+Email.userRegisterDto.email=Die E-Mail-Adresse muss gut formatiert sein.
 
-#BookDetails.description
-Size.bookDetails.description=Die Beschreibung darf nicht l\u00e4nger als die L\u00e4nge von {1} Zeichen sein.
+#BookDetailsDto.description
+Size.bookDetailsDto.description=Die Beschreibung darf nicht l\u00e4nger als die L\u00e4nge von {1} Zeichen sein.
 
-#Author.firstName
-NotBlank.author.firstName=Der Vorname des Autors darf nicht leer sein.
-Size.author.firstName=Der Vorname des Autors darf nicht l\u00e4nger als die L\u00e4nge von {1} Zeichen sein.
+#AuthorDto.firstName
+NotBlank.authorDto.firstName=Der Vorname des Autors darf nicht leer sein.
+Size.authorDto.firstName=Der Vorname des Autors darf nicht l\u00e4nger als die L\u00e4nge von {1} Zeichen sein.
 
-#Author.lastName
-NotBlank.author.lastName=Der Nachname des Autors darf nicht leer sein.
-Size.author.lastName=Der Nachname des Autors darf nicht l\u00e4nger als die L\u00e4nge von {1} Zeichen sein.
+#AuthorDto.lastName
+NotBlank.authorDto.lastName=Der Nachname des Autors darf nicht leer sein.
+Size.authorDto.lastName=Der Nachname des Autors darf nicht l\u00e4nger als die L\u00e4nge von {1} Zeichen sein.
 
 #UserProfileDto.firstName
 NotBlank.userProfileDto.firstName=Vorname ist erforderlich.
@@ -160,7 +157,7 @@ Size.userProfileDto.firstName=Der Vorname muss zwischen {2} und {1} Zeichen lang
 
 #UserProfileDto.lastName
 NotBlank.userProfileDto.lastName=Nachname ist erforderlich.
-Size.userProfileDto.lastName=Der Nachname muss zwischen der Länge von {2} und {1} Zeichen lang sein.
+Size.userProfileDto.lastName=Der Nachname muss zwischen der Lï¿½nge von {2} und {1} Zeichen lang sein.
 
 #UserProfileDto.email
 NotBlank.userProfileDto.email=Email Adresse wird ben\u00f6tigt.
