--- a/src/main/resources/messages/messages_pl.properties
+++ b/src/main/resources/messages/messages_pl.properties
@@ -47,7 +47,6 @@ books.pageTitle=Ksi\u0105\u017Cki w webSTORE
 books.title=Tytu\u0142
 books.author=Autor
 books.price=Cena
-books.category=Kategoria
 books.addToCart=Dodaj do koszyka
 books.add=Dodaj
 books.added=Dodano
@@ -103,9 +102,7 @@ checkout.address=Adres
 checkout.city=Miasto
 checkout.placeOrder=Z\u0142\u00F3\u017C zam\u00F3wienie
 checkout.yourCart=Tw\u00F3j koszyk
-checkout.promoCode=Kod promocyjne
 checkout.total=W sumie
-checkout.redeem=Odbierz
 
 #order confirmation
 confirmation.pageTitle=Potwierdzenie zam\u00F3wienia
@@ -129,30 +126,30 @@ help.viewDocs=Zobacz dokumenty
 
 ### error messages ###
 
-#UserDto.username
-Size.userDto.username=Nazwa u\u017Cytkownika musi mie\u0107 d\u0142ugo\u015B\u0107 od {2} do {1} znak\u00F3w.
-NotBlank.userDto.username=Nazwa u\u017Cytkownika nie mo\u017Ce by\u0107 pusta.
+#UserRegisterDto.username
+Size.userRegisterDto.username=Nazwa u\u017Cytkownika musi mie\u0107 d\u0142ugo\u015B\u0107 od {2} do {1} znak\u00F3w.
+NotBlank.userRegisterDto.username=Nazwa u\u017Cytkownika nie mo\u017Ce by\u0107 pusta.
 
-#UserDto.password & passwordConfirm
-NotBlank.userDto.password=Has\u0142o jest wymagane..
-Size.userDto.password=Has\u0142o musi mie\u0107 d\u0142ugo\u015B\u0107 od {2} do {1} znak\u00F3w.
-NotBlank.userDto.passwordConfirm=To pole nie mo\u017Ce by\u0107 puste.
-PasswordMatches.userDto=Has\u0142a nie pasuj\u0105 do siebie.
+#UserRegisterDto.password & passwordConfirm
+NotBlank.userRegisterDto.password=Has\u0142o jest wymagane..
+Size.userRegisterDto.password=Has\u0142o musi mie\u0107 d\u0142ugo\u015B\u0107 od {2} do {1} znak\u00F3w.
+NotBlank.userRegisterDto.passwordConfirm=To pole nie mo\u017Ce by\u0107 puste.
+PasswordMatches.userRegisterDto=Has\u0142a nie pasuj\u0105 do siebie.
 
-#UserDto.email
-NotBlank.userDto.email=Email is wymagany.
-Email.userDto.email=Niepoprawny adres email.
+#UserRegisterDto.email
+NotBlank.userRegisterDto.email=Email is wymagany.
+Email.userRegisterDto.email=Niepoprawny adres email.
 
-#BookDetails.description
-Size.bookDetails.description=Opis nie mo\u017Ce by\u0107 d\u0142u\u017Cszy ni\u017C {1} znak\u00F3w.
+#BookDetailsDto.description
+Size.bookDetailsDto.description=Opis nie mo\u017Ce by\u0107 d\u0142u\u017Cszy ni\u017C {1} znak\u00F3w.
 
-#Author.firstName
-NotBlank.author.firstName=Imi\u0119 autora nie mo\u017Ce by\u0107 puste.
-Size.author.firstName=Imi\u0119 autora nie mo\u017Ce by\u0107 d\u0142u\u017Csze ni\u017C {1} znak\u00F3w.
+#AuthorDto.firstName
+NotBlank.authorDto.firstName=Imi\u0119 autora nie mo\u017Ce by\u0107 puste.
+Size.authorDto.firstName=Imi\u0119 autora nie mo\u017Ce by\u0107 d\u0142u\u017Csze ni\u017C {1} znak\u00F3w.
 
-#Author.lastName
-NotBlank.author.lastName=Nazwisko autora nie mo\u017Ce by\u0107 puste.
-Size.author.lastName=Nazwisko autora nie mo\u017Ce by\u0107 d\u0142u\u017Csze ni\u017C {1} znak\u00F3w.
+#AuthorDto.lastName
+NotBlank.authorDto.lastName=Nazwisko autora nie mo\u017Ce by\u0107 puste.
+Size.authorDto.lastName=Nazwisko autora nie mo\u017Ce by\u0107 d\u0142u\u017Csze ni\u017C {1} znak\u00F3w.
 
 #UserProfileDto.firstName
 NotBlank.userProfileDto.firstName=Imi\u0119 jest wymagane.
